# CodeFabric

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: CODEOWNERS
.sample_projects/bookstore/: package-lock.json  package.json  server.js
.sample_projects/bookstore/config/: config.js
.sample_projects/bookstore/controllers/: bookController.js  cartController.js  discountController.js  orderController.js  reviewController.js  userController.js  wishlistController.js
.sample_projects/bookstore/db/: mongoose.js
.sample_projects/bookstore/docs/: swagger.js
.sample_projects/bookstore/middlewares/: auth.middleware.js  rateLimiter.js  requestValidator.middleware.js  security.js
.sample_projects/bookstore/models/: book.model.js  discount.model.js  order.model.js  orderItem.model.js  review.model.js  (+2 more)
modules/data/: commands.py
modules/enums/: prompt_types.py  stages.py  technologies.py
modules/graph/: debug_and_fix_agent.py  developer_agent.py
modules/llms/: default_llm.py  llms.py
modules/logging/: logger.py
modules/persistence/: pickle_memory.py  shared_pkl_memory.py
modules/prompts/: create_project_plan_prompts.py  my_prompt_templates.py
modules/rag/: rag_helper.py
modules/types/: current_file.py  enums.py  models.py  output_formatters.py  project_structure.py  requirements.py
modules/utils/: command_runner.py  commands.py  file_helper.py  file_writer.py  io_helper.py  memory_based_input_handler.py  memory_watcher.py  ranking_based_retriever.py
testing/: rag_rerank.ipynb  read_files.ipynb
(+87 files in other folders)
