[project]
name = "codefabric-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.2",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "msgpack>=1.1.0",
    "python-dotenv>=1.1.0",
    "uuid>=1.30",
]

[tool.uv.workspace]
members = [
    "outputs/todo-app",
]
